cmake_minimum_required(VERSION 3.30)

set(Project Vertex)
project(${Project})

set(LIB_VERSION_MAJOR 1)
set(LIB_VERSION_MINOR 0)
set(LIB_VERSION_PATCH 0)

set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(PROJECT_VERTEXTLIB_SOURCE_DIR ./core/src)
set(PROJECT_VERTEXTLIB_INCLUDE_DIR ./core/include)
set(PROJECT_VERTEXTLIB_COMM_SOURCE_DIR ./comm/src)
set(PROJECT_VERTEXTLIB_COMM_INCLUDE_DIR ./comm/include)
set(PROJECT_VERTEXTLIB_IO_SOURCE_DIR ./io/src)
set(PROJECT_VERTEXTLIB_IO_INCLUDE_DIR ./io/include)


include_directories(${PROJECT_VERTEXTLIB_INCLUDE_DIR} ${PROJECT_VERTEXTLIB_COMM_INCLUDE_DIR} ${PROJECT_VERTEXTLIB_IO_INCLUDE_DIR} /usr/include/ /usr/local/include/)
link_libraries(rt pthread dl)
link_directories(/usr/local/lib/ /usr/lib/ /lib/)

set(SOURCES
${SOURCES}
${PROJECT_VERTEXTLIB_SOURCE_DIR}/base64.c
${PROJECT_VERTEXTLIB_SOURCE_DIR}/buffer.c
${PROJECT_VERTEXTLIB_SOURCE_DIR}/keyvalue.c
${PROJECT_VERTEXTLIB_SOURCE_DIR}/list.c
${PROJECT_VERTEXTLIB_SOURCE_DIR}/listdoublelinked.c
${PROJECT_VERTEXTLIB_SOURCE_DIR}/queue.c
${PROJECT_VERTEXTLIB_SOURCE_DIR}/stack.c
${PROJECT_VERTEXTLIB_SOURCE_DIR}/stringex.c
${PROJECT_VERTEXTLIB_SOURCE_DIR}/file.c
${PROJECT_VERTEXTLIB_SOURCE_DIR}/directory.c
${PROJECT_VERTEXTLIB_SOURCE_DIR}/logger.c
${PROJECT_VERTEXTLIB_SOURCE_DIR}/signalhandler.c
${PROJECT_VERTEXTLIB_SOURCE_DIR}/environment.c
${PROJECT_VERTEXTLIB_SOURCE_DIR}/configuration.c
${PROJECT_VERTEXTLIB_SOURCE_DIR}/datetime.c
${PROJECT_VERTEXTLIB_SOURCE_DIR}/variant.c
${PROJECT_VERTEXTLIB_SOURCE_DIR}/dictionary.c
${PROJECT_VERTEXTLIB_SOURCE_DIR}/xml.c
${PROJECT_VERTEXTLIB_SOURCE_DIR}/json.c
${PROJECT_VERTEXTLIB_SOURCE_DIR}/vertexlib.c
)

set(HEADERS
${HEADERS}
${PROJECT_VERTEXTLIB_INCLUDE_DIR}/defines.h
${PROJECT_VERTEXTLIB_INCLUDE_DIR}/base64.h
${PROJECT_VERTEXTLIB_INCLUDE_DIR}/buffer.h
${PROJECT_VERTEXTLIB_INCLUDE_DIR}/keyvalue.h
${PROJECT_VERTEXTLIB_INCLUDE_DIR}/list.h
${PROJECT_VERTEXTLIB_INCLUDE_DIR}/listdoublelinked.h
${PROJECT_VERTEXTLIB_INCLUDE_DIR}/queue.h
${PROJECT_VERTEXTLIB_INCLUDE_DIR}/stack.h
${PROJECT_VERTEXTLIB_INCLUDE_DIR}/stringex.h
${PROJECT_VERTEXTLIB_INCLUDE_DIR}/file.h
${PROJECT_VERTEXTLIB_INCLUDE_DIR}/directory.h
${PROJECT_VERTEXTLIB_INCLUDE_DIR}/logger.h
${PROJECT_VERTEXTLIB_INCLUDE_DIR}/signalhandler.h
${PROJECT_VERTEXTLIB_INCLUDE_DIR}/environment.h
${PROJECT_VERTEXTLIB_INCLUDE_DIR}/configuration.h
${PROJECT_VERTEXTLIB_INCLUDE_DIR}/datetime.h
${PROJECT_VERTEXTLIB_INCLUDE_DIR}/variant.h
${PROJECT_VERTEXTLIB_INCLUDE_DIR}/dictionary.h
${PROJECT_VERTEXTLIB_INCLUDE_DIR}/xml.h
${PROJECT_VERTEXTLIB_INCLUDE_DIR}/json.h
${PROJECT_VERTEXTLIB_INCLUDE_DIR}/vertexlib.h
)

set(COMM_SOURCES
${COMM_SOURCES}
#${PROJECT_VERTEXTLIB_COMM_SOURCE_DIR}/responder.c
#${PROJECT_VERTEXTLIB_COMM_SOURCE_DIR}/ResponderSsl.c
${PROJECT_VERTEXTLIB_COMM_SOURCE_DIR}/tcpclient.c
${PROJECT_VERTEXTLIB_COMM_SOURCE_DIR}/mail.c
#${PROJECT_VERTEXTLIB_COMM_SOURCE_DIR}/imap.c
${PROJECT_VERTEXTLIB_COMM_SOURCE_DIR}/smtp.c
${PROJECT_VERTEXTLIB_COMM_SOURCE_DIR}/mqtt.c
)

set(COMM_HEADERS
${COMM_HEADERS}
#${PROJECT_VERTEXTLIB_COMM_INCLUDE_DIR}/responder.h
#${PROJECT_VERTEXTLIB_COMM_INCLUDE_DIR}/ResponderSsl.h
${PROJECT_VERTEXTLIB_COMM_INCLUDE_DIR}/tcpclient.h
${PROJECT_VERTEXTLIB_COMM_INCLUDE_DIR}/mail.h
${PROJECT_VERTEXTLIB_COMM_INCLUDE_DIR}/mime.h
${PROJECT_VERTEXTLIB_COMM_INCLUDE_DIR}/securitytypes.h
#${PROJECT_VERTEXTLIB_COMM_INCLUDE_DIR}/imap.h
${PROJECT_VERTEXTLIB_COMM_INCLUDE_DIR}/smtp.h
${PROJECT_VERTEXTLIB_COMM_INCLUDE_DIR}/mqtt.h
)

set(IO_SOURCES
${IO_SOURCES}
${PROJECT_VERTEXTLIB_IO_SOURCE_DIR}/hal.c
${PROJECT_VERTEXTLIB_IO_SOURCE_DIR}/i2c.c
${PROJECT_VERTEXTLIB_IO_SOURCE_DIR}/spi.c
${PROJECT_VERTEXTLIB_IO_SOURCE_DIR}/uart.c
${PROJECT_VERTEXTLIB_IO_SOURCE_DIR}/pwm.c
${PROJECT_VERTEXTLIB_IO_SOURCE_DIR}/adc.c
${PROJECT_VERTEXTLIB_IO_SOURCE_DIR}/gpio.c
${PROJECT_VERTEXTLIB_IO_SOURCE_DIR}/can.c
)

set(IO_HEADERS
${IO_HEADERS}
${PROJECT_VERTEXTLIB_IO_INCLUDE_DIR}/hal.h
${PROJECT_VERTEXTLIB_IO_INCLUDE_DIR}/haltypes.h
${PROJECT_VERTEXTLIB_IO_INCLUDE_DIR}/i2c.h
${PROJECT_VERTEXTLIB_IO_INCLUDE_DIR}/spi.h
${PROJECT_VERTEXTLIB_IO_INCLUDE_DIR}/pwm.h
${PROJECT_VERTEXTLIB_IO_INCLUDE_DIR}/adc.h
${PROJECT_VERTEXTLIB_IO_INCLUDE_DIR}/gpio.h
${PROJECT_VERTEXTLIB_IO_INCLUDE_DIR}/can.h
)


add_library(${Project}.all SHARED ${SOURCES} ${HEADERS} ${COMM_SOURCES} ${COMM_HEADERS} ${IO_SOURCES} ${IO_HEADERS})
add_library(${Project}.core SHARED ${SOURCES} ${HEADERS})
add_library(${Project}.net SHARED ${SOURCES} ${HEADERS} ${COMM_SOURCES} ${COMM_HEADERS})
add_library(${Project}.io SHARED ${SOURCES} ${HEADERS} ${IO_SOURCES} ${IO_HEADERS})

add_executable(${Project}.test.bin ${SOURCES} ${HEADERS} ./tests/main.c)
add_executable(${Project}.test_comm.bin ${SOURCES} ${HEADERS} ${COMM_SOURCES} ${COMM_HEADERS} ./tests/commmain.c)
add_executable(${Project}.test_io.bin ${SOURCES} ${HEADERS} ${IO_SOURCES} ${IO_HEADERS} ./tests/iomain.c)

# set(CPACK_PACKAGE_FILE_NAME ${Project}.${CMAKE_SYSTEM_PROCESSOR}.${LIB_VERSION_MAJOR}.${LIB_VERSION_MINOR}.${LIB_VERSION_PATCH})
# set(CPACK_PACKAGE_DESCRIPTION, "Core C Utilities for Vertex Edge Framework")
# set(CPACK_GENERATOR "DEB")
# set(CPACK_DEBIAN_PACKAGE_MAINTAINER "Subrato Roy")
# install(TARGETS ${Project} DESTINATION local/lib)
# install(FILES ${HEADERS} DESTINATION local/include/CoreLib)
# include(CPack)




