cmake_minimum_required(VERSION 3.24)

set(Project TreOnzLib)
project(${Project})

set(LIB_VERSION_MAJOR 1)
set(LIB_VERSION_MINOR 0)
set(LIB_VERSION_PATCH 0)

if(UNIX AND NOT APPLE)
    if(${CMAKE_SYSTEM_NAME} MATCHES "Android")
        message("-- Configuring for Android ...")
        set(ANDROID_LINUX TRUE)
    elseif(${CMAKE_SYSTEM_NAME} MATCHES "FreeBSD")
        message("-- Configuring for FreeBSD ...")
        set(FREEBSD TRUE)
    else()
        message("-- Configuring for GNU/Linux ...")
        set(GNU_LINUX TRUE)
    endif()
endif()
if(UNIX AND APPLE)
    message("-- Configuring for Darwin (MacOS, iOS) ...")
    set(DARWIN TRUE)
endif()

set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(PROJECT_TREONZTLIB_SOURCE_DIR ./core/src)
set(PROJECT_TREONZTLIB_INCLUDE_DIR ./core/include)
set(PROJECT_TREONZTLIB_COMM_SOURCE_DIR ./comm/src)
set(PROJECT_TREONZTLIB_COMM_INCLUDE_DIR ./comm/include)
set(PROJECT_TREONZTLIB_IO_SOURCE_DIR ./io/src)
set(PROJECT_TREONZTLIB_IO_INCLUDE_DIR ./io/include)


include_directories(${PROJECT_TREONZTLIB_INCLUDE_DIR} ${PROJECT_TREONZTLIB_COMM_INCLUDE_DIR} ${PROJECT_TREONZTLIB_IO_INCLUDE_DIR} /usr/include/ /usr/local/include/ /usr/src/sys/dev)
link_libraries(rt pthread dl)
link_directories(/usr/local/lib/ /usr/lib/ /lib/)

set(SOURCES
${SOURCES}
${PROJECT_TREONZTLIB_SOURCE_DIR}/base64.c
${PROJECT_TREONZTLIB_SOURCE_DIR}/buffer.c
${PROJECT_TREONZTLIB_SOURCE_DIR}/keyvalue.c
${PROJECT_TREONZTLIB_SOURCE_DIR}/list.c
${PROJECT_TREONZTLIB_SOURCE_DIR}/listdoublelinked.c
${PROJECT_TREONZTLIB_SOURCE_DIR}/queue.c
${PROJECT_TREONZTLIB_SOURCE_DIR}/stack.c
${PROJECT_TREONZTLIB_SOURCE_DIR}/stringex.c
${PROJECT_TREONZTLIB_SOURCE_DIR}/file.c
${PROJECT_TREONZTLIB_SOURCE_DIR}/directory.c
${PROJECT_TREONZTLIB_SOURCE_DIR}/logger.c
${PROJECT_TREONZTLIB_SOURCE_DIR}/signalhandler.c
${PROJECT_TREONZTLIB_SOURCE_DIR}/environment.c
${PROJECT_TREONZTLIB_SOURCE_DIR}/configuration.c
${PROJECT_TREONZTLIB_SOURCE_DIR}/datetime.c
${PROJECT_TREONZTLIB_SOURCE_DIR}/variant.c
${PROJECT_TREONZTLIB_SOURCE_DIR}/dictionary.c
${PROJECT_TREONZTLIB_SOURCE_DIR}/xml.c
${PROJECT_TREONZTLIB_SOURCE_DIR}/json.c
${PROJECT_TREONZTLIB_SOURCE_DIR}/treonzlib.c
)

set(HEADERS
${HEADERS}
${PROJECT_TREONZTLIB_INCLUDE_DIR}/defines.h
${PROJECT_TREONZTLIB_INCLUDE_DIR}/base64.h
${PROJECT_TREONZTLIB_INCLUDE_DIR}/buffer.h
${PROJECT_TREONZTLIB_INCLUDE_DIR}/keyvalue.h
${PROJECT_TREONZTLIB_INCLUDE_DIR}/list.h
${PROJECT_TREONZTLIB_INCLUDE_DIR}/listdoublelinked.h
${PROJECT_TREONZTLIB_INCLUDE_DIR}/queue.h
${PROJECT_TREONZTLIB_INCLUDE_DIR}/stack.h
${PROJECT_TREONZTLIB_INCLUDE_DIR}/stringex.h
${PROJECT_TREONZTLIB_INCLUDE_DIR}/file.h
${PROJECT_TREONZTLIB_INCLUDE_DIR}/directory.h
${PROJECT_TREONZTLIB_INCLUDE_DIR}/logger.h
${PROJECT_TREONZTLIB_INCLUDE_DIR}/signalhandler.h
${PROJECT_TREONZTLIB_INCLUDE_DIR}/environment.h
${PROJECT_TREONZTLIB_INCLUDE_DIR}/configuration.h
${PROJECT_TREONZTLIB_INCLUDE_DIR}/datetime.h
${PROJECT_TREONZTLIB_INCLUDE_DIR}/variant.h
${PROJECT_TREONZTLIB_INCLUDE_DIR}/dictionary.h
${PROJECT_TREONZTLIB_INCLUDE_DIR}/xml.h
${PROJECT_TREONZTLIB_INCLUDE_DIR}/json.h
${PROJECT_TREONZTLIB_INCLUDE_DIR}/treonzlib.h
)

set(COMM_SOURCES
${COMM_SOURCES}
#${PROJECT_TREONZTLIB_COMM_SOURCE_DIR}/responder.c
#${PROJECT_TREONZTLIB_COMM_SOURCE_DIR}/ResponderSsl.c
${PROJECT_TREONZTLIB_COMM_SOURCE_DIR}/tcpclient.c
${PROJECT_TREONZTLIB_COMM_SOURCE_DIR}/mail.c
${PROJECT_TREONZTLIB_COMM_SOURCE_DIR}/imap4.c
${PROJECT_TREONZTLIB_COMM_SOURCE_DIR}/smtp.c
${PROJECT_TREONZTLIB_COMM_SOURCE_DIR}/mqtt.c
)

set(COMM_HEADERS
${COMM_HEADERS}
#${PROJECT_TREONZTLIB_COMM_INCLUDE_DIR}/responder.h
#${PROJECT_TREONZTLIB_COMM_INCLUDE_DIR}/ResponderSsl.h
${PROJECT_TREONZTLIB_COMM_INCLUDE_DIR}/tcpclient.h
${PROJECT_TREONZTLIB_COMM_INCLUDE_DIR}/mail.h
${PROJECT_TREONZTLIB_COMM_INCLUDE_DIR}/mime.h
${PROJECT_TREONZTLIB_COMM_INCLUDE_DIR}/securitytypes.h
${PROJECT_TREONZTLIB_COMM_INCLUDE_DIR}/imap4.h
${PROJECT_TREONZTLIB_COMM_INCLUDE_DIR}/smtp.h
${PROJECT_TREONZTLIB_COMM_INCLUDE_DIR}/mqtt.h
)

if(FREEBSD)
set(IO_SOURCES
${IO_SOURCES}
${PROJECT_TREONZTLIB_IO_SOURCE_DIR}/hal.c
${PROJECT_TREONZTLIB_IO_SOURCE_DIR}/i2c.c
${PROJECT_TREONZTLIB_IO_SOURCE_DIR}/spi.c
${PROJECT_TREONZTLIB_IO_SOURCE_DIR}/uart.c
${PROJECT_TREONZTLIB_IO_SOURCE_DIR}/pwm.c
${PROJECT_TREONZTLIB_IO_SOURCE_DIR}/adc.c
${PROJECT_TREONZTLIB_IO_SOURCE_DIR}/dac.c
${PROJECT_TREONZTLIB_IO_SOURCE_DIR}/gpio.c
${PROJECT_TREONZTLIB_IO_SOURCE_DIR}/usb.c
${PROJECT_TREONZTLIB_IO_SOURCE_DIR}/ble.c
)

set(IO_HEADERS
${IO_HEADERS}
${PROJECT_TREONZTLIB_IO_INCLUDE_DIR}/hal.h
${PROJECT_TREONZTLIB_IO_INCLUDE_DIR}/haltypes.h
${PROJECT_TREONZTLIB_IO_INCLUDE_DIR}/i2c.h
${PROJECT_TREONZTLIB_IO_INCLUDE_DIR}/spi.h
${PROJECT_TREONZTLIB_IO_INCLUDE_DIR}/pwm.h
${PROJECT_TREONZTLIB_IO_INCLUDE_DIR}/adc.h
${PROJECT_TREONZTLIB_IO_INCLUDE_DIR}/dac.h
${PROJECT_TREONZTLIB_IO_INCLUDE_DIR}/gpio.h
${PROJECT_TREONZTLIB_IO_INCLUDE_DIR}/usb.h
${PROJECT_TREONZTLIB_IO_INCLUDE_DIR}/ble.h
)
endif()

if(GNU_LINUX)
set(IO_SOURCES
${IO_SOURCES}
${PROJECT_TREONZTLIB_IO_SOURCE_DIR}/hal.c
${PROJECT_TREONZTLIB_IO_SOURCE_DIR}/i2c.c
${PROJECT_TREONZTLIB_IO_SOURCE_DIR}/spi.c
${PROJECT_TREONZTLIB_IO_SOURCE_DIR}/uart.c
${PROJECT_TREONZTLIB_IO_SOURCE_DIR}/pwm.c
${PROJECT_TREONZTLIB_IO_SOURCE_DIR}/adc.c
${PROJECT_TREONZTLIB_IO_SOURCE_DIR}/dac.c
${PROJECT_TREONZTLIB_IO_SOURCE_DIR}/gpio.c
${PROJECT_TREONZTLIB_IO_SOURCE_DIR}/can.c
${PROJECT_TREONZTLIB_IO_SOURCE_DIR}/usb.c
${PROJECT_TREONZTLIB_IO_SOURCE_DIR}/ble.c
)

set(IO_HEADERS
${IO_HEADERS}
${PROJECT_TREONZTLIB_IO_INCLUDE_DIR}/hal.h
${PROJECT_TREONZTLIB_IO_INCLUDE_DIR}/haltypes.h
${PROJECT_TREONZTLIB_IO_INCLUDE_DIR}/i2c.h
${PROJECT_TREONZTLIB_IO_INCLUDE_DIR}/spi.h
${PROJECT_TREONZTLIB_IO_INCLUDE_DIR}/pwm.h
${PROJECT_TREONZTLIB_IO_INCLUDE_DIR}/adc.h
${PROJECT_TREONZTLIB_IO_INCLUDE_DIR}/dac.h
${PROJECT_TREONZTLIB_IO_INCLUDE_DIR}/gpio.h
${PROJECT_TREONZTLIB_IO_INCLUDE_DIR}/can.h
${PROJECT_TREONZTLIB_IO_INCLUDE_DIR}/usb.h
${PROJECT_TREONZTLIB_IO_INCLUDE_DIR}/usb.h
${PROJECT_TREONZTLIB_IO_INCLUDE_DIR}/ble.h
)
endif()

add_library(${Project}.core SHARED ${SOURCES} ${HEADERS})
add_library(${Project}.comm SHARED ${SOURCES} ${HEADERS} ${COMM_SOURCES} ${COMM_HEADERS})
add_library(${Project}.io SHARED ${SOURCES} ${HEADERS} ${IO_SOURCES} ${IO_HEADERS})

#Core library tests
add_executable(${Project}.test.bin ${SOURCES} ${HEADERS} ./tests/testcore.c)

#Pure TCP/IP Tests
add_executable(${Project}.test.smtp.bin ${SOURCES} ${HEADERS} ${COMM_SOURCES} ${COMM_HEADERS} ./tests/testsmtp.c)
add_executable(${Project}.test.imap4.bin ${SOURCES} ${HEADERS} ${COMM_SOURCES} ${COMM_HEADERS} ./tests/testimap4.c)
add_executable(${Project}.test.mqtt.bin ${SOURCES} ${HEADERS} ${COMM_SOURCES} ${COMM_HEADERS} ./tests/testmqtt.c)

#TCP/IP and Lower Level Hardware Interface Tests
add_executable(${Project}.test.modbus.bin ${SOURCES} ${HEADERS} ${COMM_SOURCES} ${COMM_HEADERS} ${IO_SOURCES} ${IO_HEADERS} ./tests/testmodbus.c)

#Pure Hardware Interface Tests
add_executable(${Project}.test_uart.bin ${SOURCES} ${HEADERS} ${IO_SOURCES} ${IO_HEADERS} ./tests/testuart.c)

set(CPACK_PACKAGE_FILE_NAME ${Project}.${CMAKE_SYSTEM_PROCESSOR}.${LIB_VERSION_MAJOR}.${LIB_VERSION_MINOR}.${LIB_VERSION_PATCH})
set(CPACK_PACKAGE_DESCRIPTION, "Core C Utilities for TREONZ Edge Framework")
set(CPACK_GENERATOR "DEB")
set(CPACK_DEBIAN_PACKAGE_MAINTAINER "Subrato Roy")
install(TARGETS ${Project}.core ${Project}.comm ${Project}.io DESTINATION local/lib)
install(FILES ${HEADERS} DESTINATION local/include/TREONZLib)
include(CPack)




